--- a/index/login.html
+++ b/index/login.html
@@ -80,7 +80,7 @@
                 <p>Follow Us On Instagram</p>
                 <div class="image-wrapper">
                     <div class="image-wrapper-row">
-                        <a href="https://instagram.com"><img src="/img/Mask group.png" alt="Picture 1"></a>
+                        <a href="https://instagram.com"><img src="/img/Mask group-ramen.png" alt="Picture 1"></a>
                         <a href="https://instagram.com"><img src="/img/Mask group (1).png" alt="Picture 2"></a>
                     </div>
                     <div class="image-wrapper-row">
