--- a/index/menu.html
+++ b/index/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YumYum - Explore a World of Flavors</title>
-    <link rel="stylesheet" href="./style/menu.css">
+    <link rel="stylesheet" href="../style/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
