--- a/index/findmeal.html
+++ b/index/findmeal.html
@@ -21,13 +21,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
-                    <a class="find" href="#">Find</a>
-                    <a href="">Menu</a>
-                    <a class="favoritelink" href="">Favorites</a>
+                    <a href="homepage.html">Home</a>
+                    <a class="find" href="findmeal.html">Find</a>
+                    <a href="menu.html">Menu</a>
+                    <a class="favoritelink" href="favoriteafter.html">Favorites</a>
                     <div class="profile">
                         <img src="../img/Ellipse 45.png">
-                        <a href="">Sabrina</a>
+                        <a href="profile.html">Sabrina</a>
                     </div>
                 </li>
             </ul>
@@ -184,5 +184,49 @@
     </form>
     
     
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-1">
+                <img src="../img/Logo.png" alt="Logo">
+                <p>In the new era of technology we look a in the future with certainty and pride to for our company and.</p>
+                <div class="footer-1-icons">
+                    <a href="https://twitter.com" target="_blank"><img src="../img/1.png" alt="Twitter"></a>
+                    <a href="https://facebook.com" target="_blank"><img src="../img/2.png" alt="Facebook"></a>
+                    <a href="https://instagram.com" target="_blank"><img src="../img/3.png" alt="Instagram"></a>
+                    <a href="https://linkedin.com" target="_blank"><img src="../img/4.png" alt="LinkedIn"></a>
+                </div>
+            </div>
+
+            <div class="footer-2">
+                <div class="footer-2-1">
+                    <p>Pages</p>
+                </div>
+                <div class="footer-2-2">
+                <a href="homepage.html"><p>Home</p></a>
+                <a href="findMeal.html"><p>Find Meal</p></a>
+                <a href="menu.html"><p>Menu</p></a>
+                <a href="favourites.html"><p>Favourites</p></a>
+                </div>
+            </div>
+
+            <div class="footer-3">
+                <p>Follow Us On Instagram</p>
+                <div class="image-wrapper">
+                    <div class="image-wrapper-row">
+                        <a href="https://instagram.com"><img src="../img/Mask group-ramen.png" alt="Picture 1"></a>
+                        <a href="https://instagram.com"><img src="../img/Mask group (1).png" alt="Picture 2"></a>
+                    </div>
+                    <div class="image-wrapper-row">
+                        <a href="https://instagram.com"><img src="../img/Mask group (2).png" alt="Picture 3"></a>
+                        <a href="https://instagram.com"><img src="../img/Mask group (3).png" alt="Picture 4"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>Copyright © 2023 Hashtag Developer. All Right<br>Reserved</p>
+        </div>
+    </div>
+
 </body>
 </html>
