--- a/index/profile.html
+++ b/index/profile.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="/style/profile.css">
-    <link rel="stylesheet" href="/style/footer.css">
+    <link rel="stylesheet" href="../style/profile.css">
+    <link rel="stylesheet" href="../style/footer.css">
 
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
 
         <div class="box-content">
             <div class="image-box">
-                <img src="/img/Ellipse 6.png" alt="Profile Picture">
+                <img src="../img/Ellipse 6.png" alt="Profile Picture">
             </div>
 
             <div class="text-wrapper">
@@ -30,7 +30,7 @@
             <a href="profileEdit.html">
                 <div class="edit-btn" >
                     <p>Edit Profile</p  >
-                    <img src="/img/tabler_edit.png" alt="Edit Button">
+                    <img src="../img/tabler_edit.png" alt="Edit Button">
                 </div>
             </a>    
         </div>
