--- a/index/favoriteafter.html
+++ b/index/favoriteafter.html
@@ -46,7 +46,7 @@
                         <h3>Caesar Salad</h3>
                     </div>
                     <div class="menu-lower-2">
-                        <img class="favorite-icon" src="../imgVector2.svg" alt="">
+                        <img class="favorite-icon" src="../img/Vector2.svg" alt="">
                     </div>
                 </div>
                 <button>Check Details</button>
